--- a/download/res/less/main.less
+++ b/download/res/less/main.less
@@ -35,6 +35,10 @@ a{
 	bottom: 0;
 	border-radius: 5px;
 	border: 1px solid @border;
+	@media (max-width: 460px){
+		width: 100%;
+		height: 100%;
+	}
 	h1{
 		font-weight: lighter;
 		padding: 20px 20px;
@@ -54,7 +58,6 @@ a{
 		font-weight: lighter;
 		padding: 10px 20px;
 		font-size: 1.6rem;
-		border-bottom: 1px solid @border;
 		span{
 			color: #999;
 		}
@@ -63,7 +66,7 @@ a{
 			padding-top: 5px;
 		}
 		.button{
-			display: inline-block;
+			display: block;
 			width: 285px;
 			height: 5rem;
 			line-height: 5rem;
@@ -82,6 +85,28 @@ a{
 			};
 			&:focus{
 				background-color: darken(@button, 5%)
+			}
+			@media (max-width: 460px){
+				width: 405px;
+				margin-top: 30px;
+			}
+			@media (max-width: 440px){
+				width: 380px;
+			}
+			@media (max-width: 420px){
+				width: 360px;
+			}
+			@media (max-width: 400px){
+				width: 340px;
+			}
+			@media (max-width: 380px){
+				width: 320px;
+			}
+			@media (max-width: 360px){
+				width: 300px;
+			}
+			@media (max-width: 340px){
+				width: 285px;
 			}
 		}
 	}
